Add JS Notebook

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <h4 style="color:lightslategrey"><i>In AP CS Principles I hope to learn more about designing a website.</i></h4>
     <h2 style="color:darksalmon">A Favorite Webpage Link</h2>
     <a href="https://codehs.com/editor/html/158794/438974/index.html">Top 5 Places in the World to Visit</a>
+    <br>
+    <a href="http://localhost:8383/madelynreynold/JSNotebook/print.html">My JS Notebook</a> 
   </body>
 </html>
