Add JS Notebook

--- a/JSNotebook/index.html
+++ b/JSNotebook/index.html
@@ -9,9 +9,10 @@
 <body>
     <h1>My JavaScript Notebook</h1>
     <ul>
-        <li><a href="print.html">print and println</a></li>
+        <li><a href="print.html">Print and Println</a></li>
         <li><a href="interrogatingyouruser.html">Interrogating Your User</a></li>
         <li><a href="MathPage.html">Math Page</a></li>
+        <li><a href="GraphicsPage.html">Graphics Page</a></li>
     </ul>
 </body>
 </html>
