--- a/JSNotebook/interrogatingyouruser.html
+++ b/JSNotebook/interrogatingyouruser.html
@@ -15,7 +15,9 @@
     </div>
     
     <!-- Describe what this notebook page is showing -->
-    <p><em>What I learned today...</em></p>
+    <p><em>This activity is designed to ask the user a series of questions to which they can respond. The readLine code has the computer read the question and display it for the 
+        user to read. The code readInt has the computer expect a number response from the user's response. The code readBoolean has the computer read a true/false response from the user and displays
+        the said information. Println then prints all of the questions and responses from the user, after the user responds to said questions.</em></p>
     
     <!-- Below is the code that will run -->
     <div>
