--- a/JSNotebook/MathPage.html
+++ b/JSNotebook/MathPage.html
@@ -16,7 +16,8 @@
     
     <!-- Describe what this notebook page is showing -->
     <p><em>The activity has the user input numbers to which the computer can compute the responses. ReadInt reads the numbers that the user inputs after answering which numbers they would like to input. 
-        The code is then ran to calculate the numbers input into the computer by the user. In this specific activity, the computer is computing the hypotenuse side of a triangle using Pythagorean theorem.</em></p>
+        The code is then ran to calculate the numbers input into the computer by the user. In this specific activity, the computer is computing the hypotenuse side of a triangle using Pythagorean theorem.
+        Once the user inputs values for the two sides, the computer will calculate the third (hypotenuse) side of the triangle.</em></p>
     
     <!-- Below is the code that will run -->
     <div>
