--- a/JSNotebook/index.html
+++ b/JSNotebook/index.html
@@ -13,6 +13,7 @@
         <li><a href="interrogatingyouruser.html">Interrogating Your User</a></li>
         <li><a href="MathPage.html">Math Page</a></li>
         <li><a href="GraphicsPage.html">Graphics Page</a></li>
+        <li><a href="LawnDecorationFigure.html">Lawn Decoration Figure</a></li>
     </ul>
 </body>
 </html>
