--- a/JSNotebook/LawnDecorationFigure.html
+++ b/JSNotebook/LawnDecorationFigure.html
@@ -73,7 +73,7 @@
         
    
 
-</sscript>
+</script>
       <canvas id="Drawing"></canvas> <!-- Graphics output canvas -->
       <textarea id="Console"></textarea> <!-- Text output console -->
     </div>
