--- a/JSNotebook/index.html
+++ b/JSNotebook/index.html
@@ -14,6 +14,8 @@
         <li><a href="MathPage.html">Math Page</a></li>
         <li><a href="GraphicsPage.html">Graphics Page</a></li>
         <li><a href="LawnDecorationFigure.html">Lawn Decoration Figure</a></li>
+        <li><a href="Tiles.html">Tiles</a></li>
+        <li><a href="ConversionFuncitons.html">Conversion Functions></a></li>
     </ul>
 </body>
 </html>
